--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,23 @@
 <div class="contents row">
   <% @posts.each do |post| %>
     <div class="content_post" style="background-image: url(<%= post.image %>);">
+      <div class="more">
+        <span><%= image_tag 'arrow_top.png' %></span>
+        <ul class="more_list">
+          <li>
+            <%= link_to '詳細', "/posts/#{post.id}", method: :get %>
+          </li>
+          <li>
+            <%= link_to '編集', "/posts/#{post.id}/edit", method: :get %>
+          </li>
+          <li>
+            <%= link_to '削除', "/posts/#{post.id}", method: :delete %>
+          </li>
+        </ul>
+      </div>
       <p><%= post.item %></p>
       <span class="name">
-        <%= post.limitation %>
+        期限：<%= post.limitation %>
       </span>
     </div>
   <% end %>
