--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,11 +25,18 @@
     <header class="header">
       <div class="header__bar row">
         <h1 class="grid-6"><a href="/">Lost And Found</a></h1>
-        <% if user_signed_in? %>
+        <!--サインインしているかつ、管理者である-->
+        <% if user_signed_in? &&  current_user.admin?%> 
           <div class="user_nav grid-6">
             <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
             <%= link_to  "投稿する", "/posts/new", class: "post" %>
           </div>
+        <!--サインインしている-->
+        <% elsif  user_signed_in? %>
+          <div class="user_nav grid-6">
+            <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+          </div>
+        <!--サインインしていない-->
         <% else %>
           <div class="grid-6">
             <%= link_to "ログイン", new_user_session_path, class: 'post' %>
