--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,17 +7,19 @@
           <li>
             <%= link_to '詳細', "/posts/#{post.id}", method: :get %>
           </li>
-          <li>
-            <%= link_to '編集', "/posts/#{post.id}/edit", method: :get %>
-          </li>
-          <li>
-            <%= link_to '削除', "/posts/#{post.id}", method: :delete %>
-          </li>
+          <% if user_signed_in? && current_user.admin?%>
+            <li>
+              <%= link_to '編集', "/posts/#{post.id}/edit", method: :get %>
+            </li>
+            <li>
+              <%= link_to '削除', "/posts/#{post.id}", method: :delete %>
+            </li>
+          <% end %>
         </ul>
       </div>
       <p><%= post.item %></p>
       <span class="name">
-        期限：<%= post.limitation %>
+        保管期限：<%= post.limitation %>
       </span>
     </div>
   <% end %>
