--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,19 +1,43 @@
 <div class ="contents row">
   <div class="content_post" style="background-image: url(<%= @post.image %>);">
-    <div class="more">
-      <span><%= image_tag 'arrow_top.png' %></span>
-      <ul class="more_list">
-        <li>
-          <%= link_to '編集', "/posts/#{@post.id}/edit", method: :get %>
-        </li>
-        <li>
-          <%= link_to '削除', "/posts/#{@post.id}", method: :delete %>
-        </li>
-      </ul>
-    </div>
+    <% if user_signed_in? && current_user.admin?%>
+      <div class="more">
+        <span><%= image_tag 'arrow_top.png' %></span>
+        <ul class="more_list">
+          <li>
+            <%= link_to '編集', "/posts/#{@post.id}/edit", method: :get %>
+          </li>
+          <li>
+            <%= link_to '削除', "/posts/#{@post.id}", method: :delete %>
+          </li>
+        </ul>
+      </div>
+    <% end %>
     <p><%= @post.item %></p>
       <span class="name">
-        期限：<%= @post.limitation %>
+        保管期限：<%= @post.limitation %>
       </span>
+  </div>
+  <div class="container">
+    <% if current_user %>
+      <%= form_with(model: [@post, @comment], local: true) do |form| %>
+        <%= form.text_area :text, placeholder: "コメントする", rows: "2" %>
+        <%= form.submit "SEND" %>
+      <% end %>
+    <% else %>
+      <strong><p>※※※ コメントの投稿には新規登録/ログインが必要です ※※※</p></strong>
+    <% end %>
+
+    <div class="comments">
+      <h4>＜コメント一覧＞</h4>
+      <% if @comments %>
+        <% @comments.each do |comment| %>
+          <p>
+            <strong><%= comment.user.name %>（<%= comment.user.room_num %>号室）：</strong>
+            <%= comment.text %>
+          </p>
+        <% end %>
+      <% end %>
+    </div>
   </div>
 </div>
