--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,42 +5,28 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
-    <script type="text/javascript">
-      WebFontConfig = {
-        google: { families: [ 'Unica+One::latin' ] }
-      };
-      (function() {
-        var wf = document.createElement('script');
-        wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
-          '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-        wf.type = 'text/javascript';
-        wf.async = 'true';
-        var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(wf, s);
-      })();
-    </script>
   </head>
 
   <body>
-    <header class="header">
-      <div class="header__bar row">
-        <h1 class="grid-6"><a href="/">Lost And Found</a></h1>
+    <header>
+      <div class="header-bar">
+        <h1 class="header-bar__logo"><a href="/">Lost And Found</a></h1>
         <!--サインインしているかつ、管理者である-->
         <% if user_signed_in? &&  current_user.admin?%> 
-          <div class="user_nav grid-6">
-            <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-            <%= link_to  "投稿する", "/posts/new", class: "post" %>
+          <div class="header-bar__buttons">
+            <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "button" %>
+            <%= link_to  "投稿する", new_post_path, class: "button" %>
           </div>
         <!--サインインしている-->
         <% elsif  user_signed_in? %>
-          <div class="user_nav grid-6">
-            <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+          <div class="header-bar__buttons">
+            <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "button" %>
           </div>
         <!--サインインしていない-->
         <% else %>
-          <div class="grid-6">
-            <%= link_to "ログイン", new_user_session_path, class: 'post' %>
-            <%= link_to "新規登録", new_user_registration_path, class: 'post' %>
+          <div class="header-bar__buttons">
+            <%= link_to "ログイン", new_user_session_path, class: "button" %>
+            <%= link_to "新規登録", new_user_registration_path, class: "button" %>
           </div>
         <% end %>
       </div>
@@ -50,7 +36,7 @@
 
     <footer>
       <p>
-        Copyright PicTweet 2019.
+        Share Reside Series
       </p>
     </footer>
   </body>
