--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,28 +1,31 @@
 <div class ="contents">
-    <div class= "content">
-      <img class="content-image" src="<%= @post.image %>">
-      <div class="content-text">
-        <div class="content-text__info">
-          <p class="item"><%= @post.item %></p><br>
-          <p>習得場所：<%= @post.place %></p>
-          <p>保管期限：<%= @post.limitation %>迄</p>
-        </div>
-        <ul class="content-text__menu">
-          <li class="content-text__menu-list">
-            <%= link_to "詳細", "/posts/#{@post.id}", method: :get, class: "content-text__menu-list__btn" %>
-          </li>
-          <% if user_signed_in? && current_user.admin? %>
-            <li class="content-text__menu-list">
-              <%= link_to "編集", "/posts/#{@post.id}/edit", method: :get, class: "content-text__menu-list__btn" %>
-            </li>
-            <li class="content-text__menu-list">
-              <%= link_to "削除", "/posts/#{@post.id}", method: :delete, class: "content-text__menu-list__btn" %>
-            </li>
-          <% end %>
-        </ul>
+  <div class= "content">
+    <%= image_tag @post.image.url, class: 'content-image' %>
+    <div class="content-text">
+      <div class="content-text__info">
+        <p class="item"><%= @post.item %></p><br>
+        <p>拾得場所：<%= @post.place %></p>
+        <p>保管期限：<%= @post.limitation %>迄</p>
       </div>
+      <ul class="gnav">
+        <li><a href="">Menu</a>
+          <ul>
+            <li>
+              <%= link_to "詳細", "/posts/#{@post.id}", method: :get %>
+            </li>
+            <% if user_signed_in? && current_user.admin? %>
+              <li>
+                <%= link_to "編集", "/posts/#{@post.id}/edit", method: :get %>
+              </li>
+              <li>
+                <%= link_to "削除", "/posts/#{@post.id}", method: :delete %>
+              </li>
+            <% end %>
+          </ul>
+        </li>
+      </ul>
     </div>
-
+  </div>
 
   <div class="comments">
     <% if current_user %>
